sample controller added